Student Report Card

--- a/Facebook/Dashboard/dashboard.html
+++ b/Facebook/Dashboard/dashboard.html
@@ -85,6 +85,7 @@
 
   <script src="../authentication/authenticate.js"></script>
   <script src="dashboard.js"></script>
+  <script src="/Login/login.js"></script>
 </body>
 
 </html>
