--- a/AI Image Generator/index.html
+++ b/AI Image Generator/index.html
@@ -30,7 +30,6 @@
         <div class="prompt-container">
           <textarea class="prompt-input" placeholder="Describe your imagination in detail..." required
             autofocus></textarea>
-
           <button class="prompt-btn" type="button">
             <i class="fa-solid fa-dice"></i>
           </button>
@@ -38,7 +37,7 @@
         <div class="prompt-actions">
           <div class="select-wrapper">
             <select class="custom-select" required>
-              <option value= "">Select Model</option>
+              <option value="">Select Model</option>
               <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
 
               <option value="black-forest-labs/FLUX.1-schnell">FLUX.1-schnell</option>
@@ -67,7 +66,7 @@
               <option value="1/1">Square (1:1)</option>
               <option value="16/9">Landscape (16:9)</option>
               <option value="9/16">Portrait (9:16)</option>
-              
+
             </select>
           </div>
 
@@ -76,6 +75,49 @@
             Generate
           </button>
         </div>
+
+        <div class="gallery-grid">
+          <div class="img-card">
+            <img src="/Icons/cropped_circle_image.png" class="result-img" />
+            <div class="img-overlay">
+              <button class="img-download-btn">
+                <i class="fa-solid fa-download"></i>
+              </button>
+            </div>
+          </div>
+
+          <div class="gallery-grid">
+            <div class="img-card">
+              <img src="/Icons/cropped_circle_image.png" class="result-img" />
+              <div class="img-overlay">
+                <button class="img-download-btn">
+                  <i class="fa-solid fa-download"></i>
+                </button>
+              </div>
+            </div>
+
+            <div class="gallery-grid">
+              <div class="img-card">
+                <img src="/Icons/cropped_circle_image.png" class="result-img" />
+                <div class="img-overlay">
+                  <button class="img-download-btn">
+                    <i class="fa-solid fa-download"></i>
+                  </button>
+                </div>
+              </div>
+
+              <div class="gallery-grid">
+                <div class="img-card">
+                  <img src="/Icons/cropped_circle_image.png" class="result-img" />
+                  <div class="img-overlay">
+                    <button class="img-download-btn">
+                      <i class="fa-solid fa-download"></i>
+                    </button>
+                  </div>
+                </div>
+
+
+              </div>
       </form>
     </div>
   </div>
